# internal/interfaces/http/routes.go
@@ -55,6 +55,7 @@ func RegisterRoutes(router *gin.Engine, userHandler *UserHandler, authHandler *A
         }
         {
             consultas.GET("/veicular/agregados/:tipo/:valor", infocarHandler.GetAgregadosB)
+            consultas.GET("/veicular/:produto/:tipo/:valor", infocarHandler.QueryProduct)
         }
     }
 
